2016-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-mode-alist): Add support for
	mu4e-compose-mode and notmuch-message-mode which are derived from
	message-mode.

2016-07-20  Roland Winkler  <winkler@gnu.org>
	* m4/emacs_wl.m4: New file
	* configure.ac: Use it.
	* NEWS, README: Document support for Wanderlust

2016-07-20  David Maus  <dmaus@dmaus.name>
	Add basic support for Wanderlust.
	* lisp/Makefile.am, lisp/makefile-temp: Support Wanderlust.
	* lisp/bbdb-mua.el (bbdb-mua-mode-alist, bbdb-mua)
	(bbdb-message-header, bbdb-mua-update-records, bbdb-mua-wrapper):
	Add support for Wanderlust.
	(bbdb-mua-auto-update-init): Add wanderlust to list of auto-update
	muas.
	* lisp/bbdb.el (bbdb-init-forms): Add support for Wanderlust.
	* lisp/bbdb-wl.el: New file.

2016-07-20 Marco Wahl <marcowahlsoft@gmail.com>
	* lisp/bbdb-com.el (bbdb-omit-record): Fix arg list of
	bbdb-redisplay-record.

2016-07-20  Roland Winkler  <winkler@gnu.org>
	Make bbdb-hashtable a proper hash table.
	* lisp/bbdb.el (bbdb-hashtable): Use make-hash-table.
	(bbdb-puthash, bbdb-gethash, bbdb-remhash, bbdb-buffer)
	* lisp/bbdb-com.el (bbdb-completion-predicate)
	(bbdb-completing-read-records, bbdb-complete-mail): Use it.

2016-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-add-to-list): Remove.
	(bbdb-pushnew, bbdb-pushnewq, bbdb-pushnewt): New macros.
	(bbdb-record-set-xfield, bbdb-record-set-field)
	(bbdb-merge-concat-remove-duplicates, bbdb-parse-records)
	(bbdb-change-record)
	* lisp/bbdb-com.el (bbdb-mail-aliases, bbdb-get-mail-aliases)
	(bbdb-add-mail-alias)
	* lisp/bbdb-mua.el (bbdb-update-records): Use them.

2015-11-14  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-auto-revert, bbdb-dedicated-window)
	(bbdb-default-domain, bbdb-mua-pop-up)
	(bbdb-horiz-pop-up-window-size, bbdb-xfields-sort-order)
	(bbdb-mua-summary-unification-list, bbdb-mail-avoid-redundancy)
	* lisp/bbdb-snarf.el (bbdb-snarf-address-us-country)