@@ -1,4 +1,4 @@
-Copyright (C) 2010-2015 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2010-2016 Roland Winkler <winkler@gnu.org>
 See the end of the file for license conditions.
 
 BBDB is the Insidious Big Brother Database for GNU Emacs.
@@ -209,7 +209,7 @@ sequence of calls is
 
 ==================================================================
 
-Copyright (C) 2010-2015 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2010-2016 Roland Winkler <winkler@gnu.org>
 
 This file is part of the Insidious Big Brother Database (aka BBDB),
 
