@@ -1,6 +1,6 @@
 BBDB todo List                                                   -*-outline-*-
 
-Copyright (C) 2011-2015 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2011-2016 Roland Winkler <winkler@gnu.org>
 See the end of the file for license conditions.
 
 * Bug fixes
@@ -52,7 +52,7 @@ See the end of the file for license conditions.
    2011-05-05 Leo <sdl.web@gmail.com>
 
 
-Copyright (C) 2011-2015 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2011-2016 Roland Winkler <winkler@gnu.org>
 
 This file is part of the Insidious Big Brother Database (aka BBDB),
 
