@@ -1,6 +1,6 @@
 BBDB NEWS -- history of user-visible changes.
 
-Copyright (C) 2013-2015 Roland Winkler <winkler@gnu.org>
+Copyright (C) 2013-2016 Roland Winkler <winkler@gnu.org>
 See the end of the file for license conditions.
 
 This file is about changes in BBDB version 3.
